# ai-adventurer

./: .gitignore  README.md  pyproject.toml
ai_adventurer/: cli_gui.py  config.py  db.py  gui_urwid.py  nlp.py  run.py  textutils.py
tests/: test_cli_gui.py  test_config.py  test_db.py  test_nlp.py  test_run.py  test_textutils.py
